working on attendance

--- a/src/app/dashboard/students/students.component.html
+++ b/src/app/dashboard/students/students.component.html
@@ -20,6 +20,7 @@
             <th>Age</th>
             <th>Number</th>
             <th>Email</th>
+            <th>Attendance</th>
             <th>Actions</th>
           </tr>
         </thead>
@@ -32,6 +33,7 @@
               <td>{{ row.age }}</td>
               <td>{{ row.number }}</td>
               <td>{{ row.email }}</td>
+              <td>{{ row.attendance }}</td>
               <td *ngIf="role == 'admin'"><button
                   (click)="getAssignedCourses(row.id);open(assignCourse);selectedStudent=row?.id;" class="btnBgRemove"
                   placement="top" ngbTooltip="Assign course"><i class="fa fa-edit"></i></button></td>
@@ -39,8 +41,10 @@
                 <!-- <button
                   (click)="getAssignedCourses(row.id);open(assignCourse)" class="btnBgRemove"
                   placement="top" ngbTooltip="Assign Marks"><i class="fa fa-edit"></i></button> -->
-                <button (click)="assignAttendance(row?.id);open(addMarks)"
-                  class="btnBgRemove" placement="top" ngbTooltip="Assign Attendance"><i class="fa fa-clipboard"></i></button>
+                <button (click)="getIndex();selectedStudent=row?.id;open(addMarks)"
+                  class="btnBgRemove" placement="top" ngbTooltip="Assign Marks"><i class="fa fa-clipboard"></i></button>
+                  <button *ngIf="row.attendance == 0" (click)="getIndex();selectedStudent=row?.id;open(addAttendance)"
+                  class="btnBgRemove" placement="top" ngbTooltip="Assign Attendance"><i class="fa fa-user"></i></button>
               </td>
             </tr>
           </ng-container>
@@ -85,5 +89,18 @@
   </div>
   <div class="modal-footer d-flex justify-content-end">
     <app-button text="Assign" (click)="giveMarks(marksForm)"></app-button>
+  </div>
+</ng-template>
+<!-- Add Marks course modal -->
+<ng-template #addAttendance let-modal>
+  <div class="modal-header">
+    <app-text tag="h4" text="Add Marks" class="text-center white"></app-text>
+    <button type="button" class="btn-close" aria-label="Close" (click)="modal.close()"></button>
+  </div>
+  <div class="modal-body capitalize white">
+    <app-form #attendanceForm [fields]="['Attendance']" [fieldTypes]="['number']" [error]="true"></app-form>
+  </div>
+  <div class="modal-footer d-flex justify-content-end">
+    <app-button text="Assign" (click)="assignAttendance(attendanceForm)"></app-button>
   </div>
 </ng-template>
