--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="row">
     <div class="col-sm-12">
-        <app-text tag="p" text="Copyright © 2023. All rights reserved. Powered by Negex." class="white text-center"></app-text>
+        <app-text tag="p" text="Copyright © 2023. All rights reserved. Powered by Ahmed Ali (王兴)." class="white text-center"></app-text>
     </div>
 </div>
