--- a/src/app/dashboard/courses/courses.component.html
+++ b/src/app/dashboard/courses/courses.component.html
@@ -8,6 +8,9 @@
         <div class="col-sm-6 d-flex justify-content-end" *ngIf="role == 'admin'">
           <app-button text="Add Course" [onClick]="route.bind(this)"></app-button>
         </div>
+        <div class="col-sm-6 d-flex justify-content-end" *ngIf="role == 'student' && fees">
+          <app-button [text]="'Your Fees: $' + fees" [onClick]="pay.bind(this)"></app-button>
+        </div>
       </div>
     </div>
     <div class="col-sm-12">
