--- a/src/app/dashboard/students/students.component.html
+++ b/src/app/dashboard/students/students.component.html
@@ -3,10 +3,21 @@
     <div class="col-sm-12 d-flex w-100">
       <div class="row w-100 align-items-center justify-content-between">
         <div class="col-sm-6 d-flex justify-content-start">
-          <input class="searchInp mb-5" type="text" [(ngModel)]="searchInput" placeholder="Search">
+          <input
+            class="searchInp mb-5"
+            type="text"
+            [(ngModel)]="searchInput"
+            placeholder="Search"
+          />
         </div>
-        <div class="col-sm-6 d-flex justify-content-end" *ngIf="role == 'admin'">
-          <app-button text="Add Student" [onClick]="route.bind(this)"></app-button>
+        <div
+          class="col-sm-6 d-flex justify-content-end"
+          *ngIf="role == 'admin'"
+        >
+          <app-button
+            text="Add Student"
+            [onClick]="route.bind(this)"
+          ></app-button>
         </div>
       </div>
     </div>
@@ -16,42 +27,70 @@
           <tr>
             <th>Id</th>
             <th>Name</th>
-            <th>Address</th>
-            <th>Age</th>
-            <th>Number</th>
             <th>Email</th>
-            <th>Password</th>
-            <th *ngIf="role == 'admin' || role == 'student'">Actions</th>
+            <th>Attendance</th>
+            <th *ngIf="role == 'admin'">Actions</th>
           </tr>
         </thead>
         <tbody>
-          <ng-container *ngIf="(data | filter: searchInput)?.length; else noData">
-            <tr *ngFor="let row of data | filter: searchInput | paginate: { itemsPerPage: 10, currentPage: p }">
+          <ng-container
+            *ngIf="(data | filter : searchInput)?.length; else noData"
+          >
+            <tr
+              *ngFor="
+                let row of data
+                  | filter : searchInput
+                  | paginate : { itemsPerPage: 10, currentPage: p }
+              "
+            >
               <td>{{ row.id }}</td>
               <td>{{ row.name }}</td>
-              <td>{{ row.address }}</td>
-              <td>{{ row.age }}</td>
-              <td>{{ row.number }}</td>
               <td>{{ row.email }}</td>
-              <td>{{ row.password }}</td>
-              <td *ngIf="role == 'admin'"><button
-                  (click)="getAssignedCourses(row.id);open(assignCourse);selectedStudent=row?.id;" class="btnBgRemove"
-                  placement="top" ngbTooltip="Assign course"><i class="fa fa-edit"></i></button></td>
-              <!-- <td *ngIf="role == 'teacher'" class="d-flex justify-content-center align-items-center">
-                <button (click)="getIndex();selectedStudent=row?.id;open(addMarks)"
-                  class="btnBgRemove" placement="top" ngbTooltip="Assign Marks"><i class="fa fa-clipboard"></i></button>
-                  <button *ngIf="row.attendance == 0" (click)="getIndex();selectedStudent=row?.id;open(addAttendance)"
-                  class="btnBgRemove" placement="top" ngbTooltip="Assign Attendance"><i class="fa fa-user"></i></button>
-              </td> -->
+              <td>{{ row.attendance ? row.attendance : 0 }}%</td>
+              <td *ngIf="role == 'admin'">
+                <ng-container *ngIf="originalCourses?.length">
+                  <button
+                    (click)="
+                      getAssignedCourses(row.id);
+                      open(assignCourse);
+                      selectedStudentId = row?.id
+                    "
+                    class="btnBgRemove"
+                    placement="top"
+                    ngbTooltip="Assign course"
+                  >
+                    <i class="fa fa-edit"></i>
+                  </button>
+                  <button
+                    *ngIf="row.courses?.length > 0 && row?.attendance == 0"
+                    (click)="selectedStudentId = row?.id; open(addAttendance)"
+                    class="btnBgRemove"
+                    placement="top"
+                    ngbTooltip="Assign Attendance"
+                  >
+                    <i class="fa fa-user"></i>
+                  </button>
+                </ng-container>
+                <button
+                  (click)="selectedStudentId = row?.id; selectedStudent = row;open(viewModal)"
+                  class="btnBgRemove"
+                  placement="top"
+                  ngbTooltip="Student's Details"
+                >
+                  <i class="fa fa-eye"></i>
+                </button>
+              </td>
             </tr>
           </ng-container>
           <ng-template #noData>
             <tr *ngIf="data?.length">
-              <td colspan="8" class="text-center white">No Matching Data Available</td>
+              <td colspan="5" class="text-center white">
+                No Matching Data Available
+              </td>
             </tr>
           </ng-template>
           <tr *ngIf="!data?.length">
-            <td colspan="8" class="text-center white">No Data Available</td>
+            <td colspan="5" class="text-center white">No Data Available</td>
           </tr>
         </tbody>
       </table>
@@ -64,40 +103,96 @@
 <!-- assign course modal -->
 <ng-template #assignCourse let-modal>
   <div class="modal-header">
-    <app-text tag="h4" text="Assign Course" class="text-center white"></app-text>
-    <button type="button" class="btn-close" aria-label="Close" (click)="modal.close()"></button>
+    <app-text
+      tag="h4"
+      text="Assign Course"
+      class="text-center white"
+    ></app-text>
+    <button
+      type="button"
+      class="btn-close"
+      aria-label="Close"
+      (click)="modal.close()"
+    ></button>
   </div>
   <div class="modal-body capitalize white">
-    <ng-select [items]="courses" bindLabel="name" bindValue="id" [(ngModel)]="selectedCourse">
+    <ng-select
+      [items]="courses"
+      bindLabel="name"
+      bindValue="id"
+      [(ngModel)]="selectedCourse"
+    >
     </ng-select>
   </div>
   <div class="modal-footer d-flex justify-content-end">
     <app-button text="Assign" [onClick]="courseAssign.bind(this)"></app-button>
   </div>
 </ng-template>
-<!-- Add Marks course modal -->
-<ng-template #addMarks let-modal>
-  <div class="modal-header">
-    <app-text tag="h4" text="Add Marks" class="text-center white"></app-text>
-    <button type="button" class="btn-close" aria-label="Close" (click)="modal.close()"></button>
-  </div>
-  <div class="modal-body capitalize white">
-    <app-form #marksForm [fields]="['Marks']" [fieldTypes]="['number']" [error]="true"></app-form>
-  </div>
-  <div class="modal-footer d-flex justify-content-end">
-    <app-button text="Assign" (click)="giveMarks(marksForm)"></app-button>
-  </div>
-</ng-template>
-<!-- Add Marks course modal -->
+<!-- Add Attendance course modal -->
 <ng-template #addAttendance let-modal>
   <div class="modal-header">
-    <app-text tag="h4" text="Add Marks" class="text-center white"></app-text>
-    <button type="button" class="btn-close" aria-label="Close" (click)="modal.close()"></button>
+    <app-text tag="h4" text="Add Attendance" class="text-center white"></app-text>
+    <button
+      type="button"
+      class="btn-close"
+      aria-label="Close"
+      (click)="modal.close()"
+    ></button>
   </div>
   <div class="modal-body capitalize white">
-    <app-form #attendanceForm [fields]="['Attendance']" [fieldTypes]="['number']" [error]="true"></app-form>
+    <app-form
+      #attendanceForm
+      [fields]="['Attendance']"
+      [fieldTypes]="['number']"
+      [error]="true"
+    ></app-form>
   </div>
   <div class="modal-footer d-flex justify-content-end">
-    <app-button text="Assign" (click)="assignAttendance(attendanceForm)"></app-button>
+    <app-button
+      text="Assign"
+      (click)="assignAttendance(attendanceForm)"
+    ></app-button>
+  </div>
+</ng-template>
+<!-- View modal -->
+<ng-template #viewModal let-modal>
+  <div class="modal-header">
+    <app-text tag="h4" text="Details" class="text-center white"></app-text>
+    <button
+      type="button"
+      class="btn-close"
+      aria-label="Close"
+      (click)="modal.close()"
+    ></button>
+  </div>
+  <div class="modal-body capitalize white">
+    <div class="d-flex align-items-center w-100">
+      <h6>Name:</h6>
+      <h6>{{ selectedStudent?.name }}</h6>
+    </div>
+    <div class="d-flex align-items-center w-100">
+      <h6>Email:</h6>
+      <h6>{{ selectedStudent?.email }}</h6>
+    </div>
+    <div class="d-flex align-items-center w-100">
+      <h6>Password:</h6>
+      <h6>{{ selectedStudent?.password }}</h6>
+    </div>
+    <div class="d-flex align-items-center w-100">
+      <h6>Age:</h6>
+      <h6>{{ selectedStudent?.age }}</h6>
+    </div>
+    <div class="d-flex align-items-center w-100">
+      <h6>Number:</h6>
+      <h6>{{ selectedStudent?.number }}</h6>
+    </div>
+    <div class="d-flex align-items-center w-100">
+      <h6>Attendance:</h6>
+      <h6>{{ selectedStudent?.attendance ? selectedStudent?.attendance : 0 }}%</h6>
+    </div>
+    <div class="d-flex align-items-center w-100">
+      <h6>Course:</h6>
+      <h6>{{ getCourseNamesByIds(selectedStudent?.courses) }}</h6>
+    </div>
   </div>
 </ng-template>
