--- a/src/app/dashboard/teachers/teachers.component.html
+++ b/src/app/dashboard/teachers/teachers.component.html
@@ -1,74 +1,205 @@
 <div class="container ps-5 pe-5 pt-5 pb-5 text-center">
   <div class="row">
     <div class="col-sm-12 d-flex w-100">
-        <div class="row w-100 align-items-center justify-content-between">
-            <div class="col-sm-6 d-flex justify-content-start">
-                <input class="searchInp mb-5" type="text" [(ngModel)]="searchInput" placeholder="Search">
-            </div>
-            <div class="col-sm-6 d-flex justify-content-end" *ngIf="role == 'admin'">
-                <app-button text="Add Teacher" [onClick]="route.bind(this)"></app-button>
-            </div>
+      <div class="row w-100 align-items-center justify-content-between">
+        <div class="col-sm-6 d-flex justify-content-start">
+          <input
+            class="searchInp mb-5"
+            type="text"
+            [(ngModel)]="searchInput"
+            placeholder="Search"
+          />
         </div>
+        <div
+          class="col-sm-6 d-flex justify-content-end"
+          *ngIf="role == 'admin'"
+        >
+          <app-button
+            text="Add Teacher"
+            [onClick]="route.bind(this)"
+          ></app-button>
+        </div>
+      </div>
     </div>
     <div class="col-sm-12">
-     
       <table class="table table-responsive table-dark white hover">
         <thead>
           <tr>
             <th>Id</th>
             <th>Name</th>
-            <th>Address</th>
-            <th>Age</th>
-            <th>Number</th>
             <th>Email</th>
-            <th>Password</th>
-            <th>Actions</th>
+            <th>Attendance</th>
+            <th *ngIf="role == 'admin'">
+              Actions
+            </th>
           </tr>
         </thead>
         <tbody>
-            <ng-container *ngIf="(data | filter: searchInput)?.length; else noData">
-          <tr *ngFor="let row of data | filter: searchInput | paginate: { itemsPerPage: 5, currentPage: p }">
-            <td>{{ row.id }}</td>
-            <td>{{ row.name }}</td>
-            <td>{{ row.address }}</td>
-            <td>{{ row.age }}</td>
-            <td>{{ row.number }}</td>
-            <td>{{ row.email }}</td>
-            <td class="pointer" (click)="copyText(row.password)"> <span placement="top"
-              ngbTooltip="Click to copy" > {{ row.password }}</span></td>
-            <td><button (click)="getAssignedCourses(row.id);open(assignCourse);selectedTeacher=row?.id" class="btnBgRemove" placement="top" ngbTooltip="Assign course"><i class="fa fa-edit"></i></button></td>
-          </tr>
-            </ng-container>
-            <ng-template #noData>
-                <tr *ngIf="data?.length">
-                  <td colspan="8" class="text-center white">No Matching Data Available</td>
-                </tr>
-              </ng-template>
+          <ng-container
+            *ngIf="(data | filter : searchInput)?.length; else noData"
+          >
+            <tr
+              *ngFor="
+                let row of data
+                  | filter : searchInput
+                  | paginate : { itemsPerPage: 10, currentPage: p }
+              "
+            >
+              <td>{{ row.id }}</td>
+              <td>{{ row.name }}</td>
+              <td>{{ row.email }}</td>
+              <td>{{ row.attendance ? row.attendance : 0 }}%</td>
+              <td *ngIf="role == 'admin'">
+                <ng-container *ngIf="originalCourses?.length">
+                  <button
+                    *ngIf="!row.courses?.length"
+                    (click)="
+                      getAssignedCourses(row.id);
+                      open(assignCourse);
+                      selectedTeacherId = row?.id
+                    "
+                    class="btnBgRemove"
+                    placement="top"
+                    ngbTooltip="Assign course"
+                  >
+                    <i class="fa fa-edit"></i>
+                  </button>
+                  <button
+                    *ngIf="row.courses?.length > 0 && row?.attendance == 0"
+                    (click)="selectedTeacherId = row?.id; open(addAttendance)"
+                    class="btnBgRemove"
+                    placement="top"
+                    ngbTooltip="Assign Attendance"
+                  >
+                    <i class="fa fa-user"></i>
+                  </button>
+                </ng-container>
+                <button
+                  (click)="
+                    selectedTeacherId = row?.id;
+                    selectedTeacher = row;
+                    open(viewModal)
+                  "
+                  class="btnBgRemove"
+                  placement="top"
+                  ngbTooltip="Teacher's Details"
+                >
+                  <i class="fa fa-eye"></i>
+                </button>
+              </td>
+            </tr>
+          </ng-container>
+          <ng-template #noData>
+            <tr *ngIf="data?.length">
+              <td colspan="5" class="text-center white">
+                No Matching Data Available
+              </td>
+            </tr>
+          </ng-template>
           <tr *ngIf="!data?.length">
-            <td  colspan="8" class="text-center white">No Data Available</td>
+            <td colspan="5" class="text-center white">No Data Available</td>
           </tr>
         </tbody>
-    </table>
+      </table>
     </div>
     <div class="col-sm-12 d-flex justify-content-end align-items-center">
-        <pagination-controls (pageChange)="p = $event"></pagination-controls>
+      <pagination-controls (pageChange)="p = $event"></pagination-controls>
     </div>
   </div>
 </div>
 <!-- assign course modal -->
 <ng-template #assignCourse let-modal>
-	<div class="modal-header">
-    <app-text tag="h4" text="Assign Course" class="text-center white"></app-text>
-		<button type="button" class="btn-close" aria-label="Close" (click)="modal.close('Cross click')"></button>
-	</div>
-	<div class="modal-body capitalize white">
-<ng-select [items]="courses" 
-           bindLabel="name" 
-           bindValue="id" 
-           [(ngModel)]="selectedCourse">
-</ng-select>
-	</div>
-	<div class="modal-footer d-flex justify-content-end">
+  <div class="modal-header">
+    <app-text
+      tag="h4"
+      text="Assign Course"
+      class="text-center white"
+    ></app-text>
+    <button
+      type="button"
+      class="btn-close"
+      aria-label="Close"
+      (click)="modal.close()"
+    ></button>
+  </div>
+  <div class="modal-body capitalize white">
+    <ng-select
+      [items]="courses"
+      bindLabel="name"
+      bindValue="id"
+      [(ngModel)]="selectedCourse"
+    >
+    </ng-select>
+  </div>
+  <div class="modal-footer d-flex justify-content-end">
     <app-button text="Assign" [onClick]="courseAssign.bind(this)"></app-button>
-	</div>
+  </div>
+</ng-template>
+<!-- Add Attendance course modal -->
+<ng-template #addAttendance let-modal>
+  <div class="modal-header">
+    <app-text tag="h4" text="Add Marks" class="text-center white"></app-text>
+    <button
+      type="button"
+      class="btn-close"
+      aria-label="Close"
+      (click)="modal.close()"
+    ></button>
+  </div>
+  <div class="modal-body capitalize white">
+    <app-form
+      #attendanceForm
+      [fields]="['Attendance']"
+      [fieldTypes]="['number']"
+      [error]="true"
+    ></app-form>
+  </div>
+  <div class="modal-footer d-flex justify-content-end">
+    <app-button
+      text="Assign"
+      (click)="assignAttendance(attendanceForm)"
+    ></app-button>
+  </div>
+</ng-template>
+<!-- View modal -->
+<ng-template #viewModal let-modal>
+  <div class="modal-header">
+    <app-text tag="h4" text="Details" class="text-center white"></app-text>
+    <button
+      type="button"
+      class="btn-close"
+      aria-label="Close"
+      (click)="modal.close()"
+    ></button>
+  </div>
+  <div class="modal-body capitalize white">
+    <div class="d-flex align-items-center w-100">
+      <h6>Name:</h6>
+      <h6>{{ selectedTeacher?.name }}</h6>
+    </div>
+    <div class="d-flex align-items-center w-100">
+      <h6>Email:</h6>
+      <h6>{{ selectedTeacher?.email }}</h6>
+    </div>
+    <div class="d-flex align-items-center w-100">
+      <h6>Password:</h6>
+      <h6>{{ selectedTeacher?.password }}</h6>
+    </div>
+    <div class="d-flex align-items-center w-100">
+      <h6>Age:</h6>
+      <h6>{{ selectedTeacher?.age }}</h6>
+    </div>
+    <div class="d-flex align-items-center w-100">
+      <h6>Number:</h6>
+      <h6>{{ selectedTeacher?.number }}</h6>
+    </div>
+    <div class="d-flex align-items-center w-100">
+      <h6>Attendance:</h6>
+      <h6>{{ selectedTeacher?.attendance ? selectedTeacher?.attendance : 0 }}%</h6>
+    </div>
+    <div class="d-flex align-items-center w-100">
+      <h6>Course:</h6>
+      <h6>{{ getCourseNamesByIds(selectedTeacher?.courses) }}</h6>
+    </div>
+  </div>
 </ng-template>
