--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -10,7 +10,9 @@
   vertical-align: top;
   width: 0.35em;
 }
-
+.activeSidebar{
+  background: #ffffff36;
+}
 .sidebar {
   position: fixed;
   left: 0;
