--- a/src/app/dashboard/overview/overview.component.html
+++ b/src/app/dashboard/overview/overview.component.html
@@ -1,7 +1,11 @@
 <div class="container mt-3">
     <div class="row">
         <div class="col-sm-12">
-            <app-greet></app-greet>
+            <div class="d-flex justify-content-between align-content-center">
+                <app-greet></app-greet>
+                <h4 class="text-center white">Your Balance: {{accountBalance | currency :'USD'}}</h4>
+            </div>
+
         </div>
         <div class="col-sm-3">
             <app-flip-card avatar="../../../assets/studentIcon.png" alt="student icon" heading="Total Students" [text]="studentsLength"></app-flip-card>
