--- a/src/app/dashboard/students/students.component.html
+++ b/src/app/dashboard/students/students.component.html
@@ -168,31 +168,31 @@
   <div class="modal-body capitalize white">
     <div class="d-flex align-items-center w-100">
       <h6>Name:</h6>
-      <h6>{{ selectedStudent?.name }}</h6>
+      <h6 class="lowerCase">{{ selectedStudent?.name }}</h6>
     </div>
     <div class="d-flex align-items-center w-100">
       <h6>Email:</h6>
-      <h6>{{ selectedStudent?.email }}</h6>
+      <h6 class="lowerCase">{{ selectedStudent?.email }}</h6>
     </div>
     <div class="d-flex align-items-center w-100">
       <h6>Password:</h6>
-      <h6>{{ selectedStudent?.password }}</h6>
+      <h6 class="lowerCase">{{ selectedStudent?.password }}</h6>
     </div>
     <div class="d-flex align-items-center w-100">
       <h6>Age:</h6>
-      <h6>{{ selectedStudent?.age }}</h6>
+      <h6 class="lowerCase">{{ selectedStudent?.age }}</h6>
     </div>
     <div class="d-flex align-items-center w-100">
       <h6>Number:</h6>
-      <h6>{{ selectedStudent?.number }}</h6>
+      <h6 class="lowerCase">{{ selectedStudent?.number }}</h6>
     </div>
     <div class="d-flex align-items-center w-100">
       <h6>Attendance:</h6>
-      <h6>{{ selectedStudent?.attendance ? selectedStudent?.attendance : 0 }}%</h6>
+      <h6 class="lowerCase">{{ selectedStudent?.attendance ? selectedStudent?.attendance : 0 }}%</h6>
     </div>
     <div class="d-flex align-items-center w-100">
       <h6>Course:</h6>
-      <h6>{{ getCourseNamesByIds(selectedStudent?.courses) }}</h6>
+      <h6 class="lowerCase">{{ getCourseNamesByIds(selectedStudent?.courses) }}</h6>
     </div>
   </div>
 </ng-template>
